--- a/kostyukov_mi/task6/task6.vcxproj
+++ b/kostyukov_mi/task6/task6.vcxproj
@@ -112,6 +112,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="TaylorFuncs.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TaylorFuncs.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
